# Optimization_for_AI_Team_project

./: .gitignore  README.md  pyproject.toml
analysis/: model_memory.py  rank.py
script/: run.sh  run_lora.sh  run_quantifed.sh
src/: TrainLoRA_Cola.ipynb  glue-sst2.py  glue_sst2_custom_train.py  train_peft.py  visualize_rank.py
