[project]
name = "adaptive-rank-for-lora"
version = "0.1.0"
description = "Adaptive Rank for LoRA - Final project of optimization for AI 2025-2"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.5.0",
    "datasets>=2.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

